<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.vikrant.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q1"
                android:textColor="#212121"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3" />

                <RadioButton

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5" />

                <RadioButton

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="7" />

                <RadioButton
                    android:id="@+id/Q1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9" />


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q2"
                android:textColor="#212121"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2 months" />

                <RadioButton
                    android:id="@+id/Q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4 months" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="11 months" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="12 months" />


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q3"
                android:textColor="#212121"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/group_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gold" />

                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Iron" />

                <RadioButton
                    android:id="@+id/Q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Diamond" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Platinum" />


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q4"
                android:textColor="#212121"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="240" />

            <CheckBox
                android:id="@+id/Q4a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="149" />

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="180" />

            <CheckBox
                android:id="@+id/Q4b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="151" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 5"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q5"
                android:textColor="#212121"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Q5a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Marshmallow" />

            <CheckBox
                android:id="@+id/Q5b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lollipop" />

            <CheckBox
                android:id="@+id/Q5c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Oreo" />

            <CheckBox
                android:id="@+id/check3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mushroom" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 6"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q6"
                android:textColor="#212121"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/Q6a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alpha" />

            <CheckBox
                android:id="@+id/Q6b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Beta" />

            <CheckBox
                android:id="@+id/check4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kitkat" />

            <CheckBox
                android:id="@+id/check5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="JellyBean" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 7"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q7"
                android:textColor="#212121"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/github" />

            <EditText
                android:id="@+id/Q7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Question 8"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Q8"
                android:textColor="#212121"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/google" />

            <EditText
                android:id="@+id/Q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <Button
                android:id="@+id/Submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Submit" />

            <Button
                android:id="@+id/Reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Reset" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
